# mazemazemaze

./: Cargo.toml  index.html  mazemazemaze-7e9c520fee858cf3.js
.github/workflows/: pages.yml
assets/: goal.glb  new_2d_maze.glb  new_3d_maze.glb
src/: direction.rs  filter.rs  filter.wgsl  main.rs  marker.rs  maze2d.rs  maze3d.rs  menu.rs  player2d.rs  player3d.rs  state.rs
static/: sound.js  styles.css
