[package]
name = "mazemazemaze"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9.1", features = ["wayland"] }
bevy_embedded_assets = "0.6.1"
bevy_rapier3d = { version = "0.19.0", features = ["wasm-bindgen"] }
block-mesh = "0.2.0"
fastrand = "1.8.0"
